@@ -149,6 +149,7 @@ END:VTIMEZONE</gd:recurrence>
 		<gd:when endTime="2006-09-30T16:30:00.000-07:00" startTime="2006-09-30T14:00:00.000-07:00">
 			<gd:reminder minutes="10"/>
 		</gd:when>
+		<gd:deleted/>
 		<gd:where valueString="Seattle"/>
 	</entry>
 </feed>
